# sbppc

./: README.md  pyproject.toml  setup.cfg
docs/: example_fitting.ipynb
sbppc/: __init__.py  functions.py  numba_utils.py  tool_emcee.py
tests/: __init__.py  test_comprehensive.py  test_functions.py  test_mcmc.py  test_numba_utils.py  test_tool_emcee.py
