[metadata]
name = sbppc
version = 0.0.1
description = Small bodies polarimetric phase curve fitting tools
# long_description = file: README.md, LICENSE
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ysBach/sbppc
author = Yoonsoo P. Bach
author_email = ysbach93@gmail.com,
license = BSD 3-clause
license_file = LICENSE
keywords = astronomy, polarimetry
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
project_urls =
    Source = https://github.com/ysBach/sbppc
    Tracker = https://github.com/ysBach/sbppc/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
zip_safe = False
platforms = any
include_package_data = True
setup_requires =
    setuptools_scm

[options.package_data]
* = *.md